[package]
name = "esp32c3-test"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }
secp256k1 = { version = "0.22.0", default-features = false, features = ["lowmemory", "alloc"] }

[build-dependencies]
embuild = "0.29"
anyhow = "1"
